# rtk

./: .dockerignore  .gitignore  .gitmodules  BOOTSTRAP.md  BRANCH_PROTECTION_SETUP.md  BUILD_PERFORMANCE_SUMMARY.md  CLAUDE.md  Claude.MD  DEBUG_OPTIONS.md  DOCKER.md  Debug.hs  DebugOptions.hs  Dockerfile.dev  EmptyGrammar_Test.hs  GenAST.hs  GenQ.hs  GenX.hs  GenY.hs  Grammar.hs  IMPROVEMENT_PLAN.md  ISSUE-29-FIX.md  Lexer.x  Normalize.hs  OPTIMIZATIONS.md  PARSER_TEST_ANALYSIS.md  PARSER_TEST_SUMMARY.md  PHASE1_HYBRID_BLOCKER.md  Parser.y  PrintGrammar.hs  README.md  REAL_WORLD_TEST_RESULTS.md  StrQuote.hs  StrQuote_Test.hs  StringLiterals.hs  TESTING.md  TokenProcessing.hs  analyze-failures.sh  benchmark-java-grammar.sh  build-bootstrap.sh  compare-bootstrap.sh  (+16 more)
.claude/: ENVIRONMENT.md  SESSION_START.txt  project-context.md  setup.md
.github/workflows/: ci.yml
docs/: BOOTSTRAP.md  alex-single-quote-bug.md  assignment-operator-fix.md  bootstrapping-strategy.md  conflict-reduction-results.md  expression-hierarchy-fix.md  java-grammar-build-performance.md  java-grammar-conflict-analysis.md  java-qq-hierarchical-grammar-solution.md  java-quasi-quotation-tests.md  java-test-suite.md  javadoc-lexer-fix.md  method-body-parsing-issue.md  parameter-list-fix.md  parameter-parsing-investigation.md  pattern-matching-quasi-quotations.md  prototype-0-gap-analysis.md  prototype-2-plan.md  python-quasi-quotation-analysis.md  python-t-strings-pattern-matching-design.md  self-hosting-strategy.md  why-qq-limitations.md
scripts/: setup-branch-protection.sh
src/: DocQuote.hs  GenAST.hs  GenClasses.hs  GenXY.hs  Generator.hs  LensStateWrapper.hs  Lexer.hs  MonadFuture.hs  Parser.hs  Parser.y  RefTable.hs  Test.hs  Utils.hs  main.hs
test-grammars/: Complex.java  JavaLexer-manual.x  Simple.java  Test.java  TestAnnotations.java  TestBasic.java  TestEnum.java  TestExpressions.java  TestGenerics.java  TestMinimal.java  antirule-bug-targeted.pg  antirule-cache-bug.pg  debug-test.pg  empty.pg  grammar-main.hs  grammar.pg  haskell-main.hs  haskell.pg  java-main-full.hs  java-main-hybrid.hs  java-main-manual.hs  java-main-simple.hs  java-main.hs  java-qq-pattern-test.hs  java-qq-test.hs  java-simple-main.hs  java-simple-test.hs  java-simple.hs  java-simple.pg  java.pg  p-main.hs  p.pg  sandbox-main.hs  sandbox.pg  t1.pg  test.sandbox
test-grammars/java/: test-compound-assignment.java  test-empty-method.java  test-field-public.java  test-field-this.java  test-field.java  test-package.java  test-parameter-only.java  test-return-field.java  test-set-value.java  test-simple-assignment.java  test-simple-return.java  test-simple-string.java  test-very-simple.java
test-grammars/java/javadoc/: test-blank-then-link.java  test-just-hash.java  test-link-tag.java  test-minimal-at.java  test-minimal-fail.java  test-minimal-hash.java
test-suites/: commons-lang-lexer-blacklist-tests.txt  commons-lang-lexer-blacklist.txt
