Cabal-Version:       2.2
Name:                rtk
Version:             0.10
Description:         Generates rewrite facilities for the given grammar
License:             GPL-3.0-or-later
Author:              Nickolay Lysenko
Maintainer:          nickolay.lysenko@gmail.com
Build-Type:          Simple

Library
  Exposed-Modules: 
                   Lexer,
                   Parser,
                   Grammar
  Build-Depends:     base >= 4.7 && < 5, array, syb, template-haskell, containers, mtl, pretty, pretty-show, MissingH, haskell-src-exts, haskell-src-meta, lens
  Default-Language: Haskell2010
  Default-Extensions:  DeriveDataTypeable
  ghc-options:       -Wall -Wunused-imports -Wunused-top-binds -Wunused-local-binds -Wunused-matches

Executable rtk
  Main-is:           main.hs
  hs-source-dirs:    ., src/generated
  Build-Depends:     base >= 4.7 && < 5, array, syb, template-haskell, containers, mtl, pretty, pretty-show, MissingH, haskell-src-exts, haskell-src-meta, lens, HUnit, optparse-applicative, time, ansi-terminal, regex-posix, regex-base
  Build-Tool-Depends: happy:happy, alex:alex
  Autogen-Modules:
                     GrammarLexer,
                     GrammarParser,
                     GrammarQQ
  Other-Modules:
                     Lexer,
                     Parser,
                     TokenProcessing,
                     Grammar,
                     GenAST,
                     GenQ,
                     GenX,
                     GenY,
                     Normalize,
                     PrintGrammar,
                     StrQuote,
                     StringLiterals,
                     DebugOptions,
                     Debug,
                     GrammarLexer,
                     GrammarParser,
                     GrammarQQ,
                     ASTAdapter
  Default-Language: Haskell2010
  Default-Extensions: DeriveDataTypeable
  ghc-options:       -rtsopts -Wall -Wunused-imports -Wunused-top-binds -Wunused-local-binds -Wunused-matches
